--- a/src/login2.html
+++ b/src/login2.html
@@ -109,7 +109,7 @@
                     </span>
                 </span>
 
-                <div id="trigger01" class="select">
+                <div id="trigger1" class="select">
 
                 </div>
             </div>
@@ -176,7 +176,7 @@
                 </span>
             </span>
 
-            <div class="informationInput select" id="trigger07">
+            <div class="informationInput select" id="relationship1">
 
             </div>
         </div>
@@ -190,26 +190,7 @@
             </div>
         </div>
 
-        <h2 class="babyInformation">寶寶資料二</h2>
 
-        <div class="detialConditionDataInput">
-            <span>
-                <span>寶寶姓名</span>
-            </span>
-            <div class="informationInput">
-                <input type="text">
-            </div>
-        </div>
-        <div class="detialConditionDataInput">
-            <span class="colorFont">
-                <span>
-                    <span>親子關系</span>
-                </span>
-            </span>
-            <div class="informationInput select" id="trigger18">
-            </div>
-
-        </div>  
             <h2 class="babyInformation">寶寶資料二</h3>
 
                 <div class="detialConditionDataInput">
@@ -271,7 +252,7 @@
                         <span>
                             <span>驗證碼</span>
                         </span>
-                        <div class="informationInput">
+                        <div class="informationInput check-number">
                             <input type="text" placeholder=" 驗證碼 ">
                         </div>
                     </div>
