--- a/src/total.html
+++ b/src/total.html
@@ -526,7 +526,7 @@
                             <span>
                                 <span>驗證碼</span>
                             </span>
-                            <div class="informationInput">
+                            <div class="informationInput check-number">
                                 <input type="text" placeholder=" 驗證碼 ">
                             </div>
                         </div>
