--- a/src/shopping-trolley.html
+++ b/src/shopping-trolley.html
@@ -72,7 +72,7 @@
 			<p>NT&nbsp;&#36;2000</p>
 			<div class="shopping-trolley-container_count">
 				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
-				<div>1</div>
+				<div><input type="text"  placeholder="1" value="" disabled="true"></div>
 				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
@@ -92,7 +92,7 @@
 			<p>NT&nbsp;&#36;2000</p>
 			<div class="shopping-trolley-container_count">
 				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
-				<div>1</div>
+				<div><input type="text"  placeholder="1" value="" disabled="true"></div>
 				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
@@ -112,7 +112,7 @@
 			<p>NT&nbsp;&#36;2000</p>
 			<div class="shopping-trolley-container_count">
 				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
-				<div>1</div>
+				<div><input type="text"  placeholder="1" value="" disabled="true"></div>
 				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
@@ -132,7 +132,7 @@
 			<p>NT&nbsp;&#36;150</p>
 			<div class="shopping-trolley-container_count">
 				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
-				<div>1</div>
+				<div><input type="text"  placeholder="1" value="" disabled="true"></div>
 				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
@@ -152,7 +152,7 @@
 			<p>NT&nbsp;&#36;150</p>
 			<div class="shopping-trolley-container_count">
 				<div><input type="text"  placeholder="-" value="" disabled="true"></div>
-				<div>1</div>
+				<div><input type="text"  placeholder="1" value="" disabled="true"></div>
 				<div><input type="text"  placeholder="+" value="" disabled="true"></div>
 			</div>
 		</div>	
