--- a/src/login1.html
+++ b/src/login1.html
@@ -168,11 +168,19 @@
                     <span class="color">*</span>
                     <span>身份字號</span>
                 </span>
-                <div>
-                    <input type="checkbox" name="lname" />
-                    <span class="numberLogin">外籍人士请勾选此处并填入护照号码</span>
-                </div>
+                <input type="text" placeholder="XXX">
             </div>
+
+            <div class="detialConditionDataInput informationConditionDataInput">
+                    <span>
+                        <span class="color">&nbsp;</span>
+                        <span>&nbsp;</span>
+                    </span>
+                    <div>
+                        <input type="checkbox" name="lname" />
+                        <span class="numberLogin">外籍人士请勾选此处并填入护照号码</span>
+                    </div>
+                </div>
             <div class="detialConditionDataInput informationConditionDataInput">
                 <span>
                     <span class="color">*</span>
