修改login1 身份字号

--- a/src/login1.html
+++ b/src/login1.html
@@ -178,7 +178,7 @@
                     </span>
                     <div>
                         <input type="checkbox" name="lname" />
-                        <span class="numberLogin">外籍人士请勾选此处并填入护照号码</span>
+                        <span class="numberLogin1">外籍人士请勾选此处并填入护照号码</span>
                     </div>
                 </div>
             <div class="detialConditionDataInput informationConditionDataInput">
