--- a/src/total.html
+++ b/src/total.html
@@ -174,11 +174,20 @@
                         <span class="color">*</span>
                         <span>身份字號</span>
                     </span>
+                    <input type="text" placeholder="XXX">
+                </div>
+        
+                <div class="detialConditionDataInput informationConditionDataInput">
+                    <span>
+                        <span class="color">&nbsp;</span>
+                        <span>&nbsp;</span>
+                    </span>
                     <div>
                         <input type="checkbox" name="lname" />
-                        <span class="numberLogin3">外籍人士请勾选此处并填入护照号码</span>
+                        <span class="numberLogin1">外籍人士请勾选此处并填入护照号码</span>
                     </div>
                 </div>
+
                 <div class="detialConditionDataInput informationConditionDataInput">
                     <span>
                         <span class="color">*</span>
